added nav menu and separated components into individual files

--- a/ColorsTest/app/index.ejs
+++ b/ColorsTest/app/index.ejs
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <div id="app" class="container"></div>
+        <div id="app"></div>
 
         <!-- Dependencies -->
         <script src="/react.js"></script>
