--- a/ColorsTest/app/index.scss
+++ b/ColorsTest/app/index.scss
@@ -1,4 +1,39 @@
+$dark-blue: #2d496d;
+$blue: #337ab7;
+$light-blue: #ecf9ff;
 
-.bg-gray {
-    background-color: #eee;
+$gray: #ddd;
+$light-gray: #eee;
+$gray-hover: #f5f5f5;
+
+@import "./components/nav/nav";
+
+.app-container {
+    margin-top: 10px;
+}
+
+.flex-container {
+    display: flex;
+}
+
+.panel {
+    border: 1px solid $light-gray;
+    border-radius: 0;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.modal-header {
+    padding: 10px;
+    border-bottom: 1px solid $light-gray;
+    font-size: 18px;
+}
+
+.modal-body {
+    padding: 10px;
+}
+
+.modal-footer {
+    padding: 10px;
+    margin-top: 10px;
+    border-top: 1px solid $light-gray;
 }
