rendered people list and colors list

--- a/ColorsTest/app/index.scss
+++ b/ColorsTest/app/index.scss
@@ -7,6 +7,8 @@ $light-gray: #eee;
 $gray-hover: #f5f5f5;
 
 @import "./components/nav/nav";
+@import "./pages/people/list/list";
+@import "./pages/colors/colors";
 
 .app-container {
     margin-top: 10px;
