--- a/ColorsTest/app/components/nav/nav.scss
+++ b/ColorsTest/app/components/nav/nav.scss
@@ -12,6 +12,7 @@
             flex-grow: 1;
             font-size: 22px;
             color: #fff;
+            text-decoration: none;
         }
     
         &-item {
