adding edit person

--- a/ColorsTest/app/index.scss
+++ b/ColorsTest/app/index.scss
@@ -8,6 +8,7 @@ $gray-hover: #f5f5f5;
 
 @import "./components/nav/nav";
 @import "./pages/people/list/list";
+@import "./pages/people/edit/edit";
 @import "./pages/colors/colors";
 
 .app-container {
